--- a/notebooks/guide-through-the-workshop.ipynb
+++ b/notebooks/guide-through-the-workshop.ipynb
@@ -360,7 +360,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "## Pair programming\n",
     "\n",
@@ -459,7 +463,8 @@
     "## Game of life V1\n",
     "**30 mins **\n",
     "\n",
-    "![Game of life](http://jscoderetreat.com/img/downloads/gameoflife.jpg)\n",
+    "<img src=\"http://jscoderetreat.com/img/downloads/gameoflife.jpg\" alt=\"Game of Life\" style=\"height: 40vh;\"/>\n",
+    "\n",
     "* Hint: Start with the rules :)"
    ]
   },
@@ -515,8 +520,7 @@
    "source": [
     "## Game of life V2\n",
     "**20 mins**\n",
-    "![Game of life](http://jscoderetreat.com/img/downloads/gameoflife.jpg)\n",
-    "* Stick to the TDD circle and the the three laws\n",
+    "<img src=\"http://jscoderetreat.com/img/downloads/gameoflife.jpg\" alt=\"Game of Life\" style=\"height: 40vh;\"/>\n",
     "* Silent TDD"
    ]
   },
@@ -529,6 +533,7 @@
    },
    "source": [
     "## Wrap up\n",
+    "** 15mins **\n",
     "\n",
     "What did you\n",
     "* learn\n",
