added Etherpad link

--- a/notebooks/guide-through-the-workshop.ipynb
+++ b/notebooks/guide-through-the-workshop.ipynb
@@ -122,14 +122,16 @@
     }
    },
    "source": [
-    "## Why care for software carpentry as a scientist?"
+    "## Should scientists be software engineers?\n",
+    "\n",
+    "Collect your thoughts on this [Etherpad](https://board.net/p/smart_start_tdd) (2mins)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "source": [
