changed from a link to full adress for readability

--- a/notebooks/guide-through-the-workshop.ipynb
+++ b/notebooks/guide-through-the-workshop.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "## Should scientists be software engineers?\n",
     "\n",
-    "Collect your thoughts on this [Etherpad](https://board.net/p/smart_start_tdd) (2mins)"
+    "Collect your thoughts on this Etherpad, https://board.net/p/smart_start_tdd (2mins)"
    ]
   },
   {
