added a git guide

--- a/notebooks/guide-through-the-workshop.ipynb
+++ b/notebooks/guide-through-the-workshop.ipynb
@@ -570,6 +570,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
