added a git guide

--- a/notebooks/guide-through-the-workshop.ipynb
+++ b/notebooks/guide-through-the-workshop.ipynb
@@ -572,7 +572,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simp"
+    "## Simple git guide\n",
+    "\n",
+    "* http://rogerdudler.github.io/git-guide/"
    ]
   },
   {
